--- a/P10_Reciplease/View/Base.lproj/Main.storyboard
+++ b/P10_Reciplease/View/Base.lproj/Main.storyboard
@@ -33,9 +33,9 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="0wi-Kk-X6E">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="200" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="0wi-Kk-X6E">
                                 <rect key="frame" x="0.0" y="88" width="414" height="725"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" systemColor="systemGray6Color"/>
                             </tableView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="SjW-0w-ebl">
                                 <rect key="frame" x="0.0" y="388" width="414" height="119"/>
@@ -212,7 +212,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="PJq-zI-gry">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="200" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="PJq-zI-gry">
                                 <rect key="frame" x="0.0" y="88" width="414" height="725"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </tableView>
@@ -244,7 +244,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QwG-vu-EON">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="QwG-vu-EON">
                                 <rect key="frame" x="0.0" y="88" width="414" height="313.5"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EfC-64-BJZ">
@@ -291,35 +291,27 @@
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="piS-Df-TsF">
                                 <rect key="frame" x="344" y="103" width="60" height="40"/>
-                                <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="uJZ-nT-FOx">
-                                        <rect key="frame" x="0.0" y="0.0" width="60" height="40"/>
-                                        <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xHC-9s-sbR">
-                                                <rect key="frame" x="0.0" y="0.0" width="60" height="20"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="926-wA-ayK">
-                                                <rect key="frame" x="0.0" y="20" width="60" height="20"/>
-                                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
-                                        </subviews>
-                                    </stackView>
-                                </subviews>
-                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstItem="uJZ-nT-FOx" firstAttribute="leading" secondItem="piS-Df-TsF" secondAttribute="leading" id="3Av-BU-DVt"/>
                                     <constraint firstAttribute="width" constant="60" id="Clf-ku-Gxs"/>
-                                    <constraint firstAttribute="trailing" secondItem="uJZ-nT-FOx" secondAttribute="trailing" id="O9x-i7-vt7"/>
-                                    <constraint firstItem="uJZ-nT-FOx" firstAttribute="top" secondItem="piS-Df-TsF" secondAttribute="top" id="aAC-co-F2d"/>
                                     <constraint firstAttribute="height" constant="40" id="laM-TP-CPu"/>
-                                    <constraint firstAttribute="bottom" secondItem="uJZ-nT-FOx" secondAttribute="bottom" id="r72-t1-HEV"/>
                                 </constraints>
                             </view>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="uJZ-nT-FOx">
+                                <rect key="frame" x="357" y="107" width="34" height="32"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xHC-9s-sbR">
+                                        <rect key="frame" x="0.0" y="0.0" width="34" height="16"/>
+                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="13"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="926-wA-ayK">
+                                        <rect key="frame" x="0.0" y="16" width="34" height="16"/>
+                                        <fontDescription key="fontDescription" type="system" weight="medium" pointSize="13"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="T2R-H7-1x8"/>
                         <color key="backgroundColor" systemColor="systemGray6Color"/>
@@ -329,6 +321,7 @@
                             <constraint firstItem="EfC-64-BJZ" firstAttribute="leading" secondItem="T2R-H7-1x8" secondAttribute="leading" constant="10" id="6vO-Gx-DIQ"/>
                             <constraint firstItem="T2R-H7-1x8" firstAttribute="trailing" secondItem="w51-TE-gRl" secondAttribute="trailing" constant="20" id="70g-o4-mTU"/>
                             <constraint firstItem="QwG-vu-EON" firstAttribute="leading" secondItem="T2R-H7-1x8" secondAttribute="leading" id="AfT-EI-wGS"/>
+                            <constraint firstItem="uJZ-nT-FOx" firstAttribute="centerX" secondItem="piS-Df-TsF" secondAttribute="centerX" id="BZ8-9M-Xg9"/>
                             <constraint firstItem="QwG-vu-EON" firstAttribute="trailing" secondItem="T2R-H7-1x8" secondAttribute="trailing" id="CBE-Gj-chv"/>
                             <constraint firstItem="i39-2h-fGh" firstAttribute="leading" secondItem="T2R-H7-1x8" secondAttribute="leading" id="GQM-Sa-nyb"/>
                             <constraint firstItem="T2R-H7-1x8" firstAttribute="trailing" secondItem="WBG-0j-ts2" secondAttribute="trailing" constant="30" id="Hwx-bp-TE4"/>
@@ -336,6 +329,7 @@
                             <constraint firstItem="i39-2h-fGh" firstAttribute="top" secondItem="w51-TE-gRl" secondAttribute="bottom" constant="5" id="Kwn-05-F07"/>
                             <constraint firstItem="QwG-vu-EON" firstAttribute="bottom" secondItem="EfC-64-BJZ" secondAttribute="bottom" constant="10" id="NWX-i5-zat"/>
                             <constraint firstItem="piS-Df-TsF" firstAttribute="top" secondItem="T2R-H7-1x8" secondAttribute="top" constant="15" id="PQU-1B-sGw"/>
+                            <constraint firstItem="uJZ-nT-FOx" firstAttribute="centerY" secondItem="piS-Df-TsF" secondAttribute="centerY" id="Qqr-d3-e7w"/>
                             <constraint firstItem="T2R-H7-1x8" firstAttribute="trailing" secondItem="piS-Df-TsF" secondAttribute="trailing" constant="10" id="bKq-Qe-1rU"/>
                             <constraint firstItem="WBG-0j-ts2" firstAttribute="height" secondItem="w6j-8N-oZO" secondAttribute="height" multiplier="0.0602679" id="dQT-0x-cmf"/>
                             <constraint firstItem="w51-TE-gRl" firstAttribute="leading" secondItem="T2R-H7-1x8" secondAttribute="leading" constant="20" id="gqT-iX-XDa"/>
@@ -417,7 +411,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="jWE-DM-HAf"/>
+        <segue reference="EA1-MU-Q7e"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.038537143529999998" green="0.58823529409999997" blue="0.33644970410000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
     <resources>
