--- a/P10_Reciplease/View/SearchResultTableViewCell.xib
+++ b/P10_Reciplease/View/SearchResultTableViewCell.xib
@@ -9,77 +9,80 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SearchResultTableViewCell" rowHeight="189" id="KGk-i7-Jjw" customClass="SearchResultTableViewCell" customModule="P10_Reciplease" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="330" height="141"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SearchResultTableViewCell" rowHeight="349" id="KGk-i7-Jjw" customClass="SearchResultTableViewCell" customModule="P10_Reciplease" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="645" height="290"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="330" height="141"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="645" height="290"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ng0-Xj-c1e">
-                        <rect key="frame" x="0.0" y="0.0" width="330" height="140"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="140" id="cVU-Xv-mUW"/>
-                        </constraints>
+                        <rect key="frame" x="0.0" y="0.0" width="645" height="290"/>
                     </imageView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e5R-mB-aFr">
+                        <rect key="frame" x="0.0" y="0.0" width="645" height="290"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qFJ-lH-oOT">
-                        <rect key="frame" x="4" y="114" width="322" height="18"/>
+                        <rect key="frame" x="4" y="264" width="637" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="m7n-0h-CdK">
-                        <rect key="frame" x="4" y="89" width="322" height="21"/>
+                        <rect key="frame" x="4" y="238.5" width="637" height="21.5"/>
                         <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="09P-xg-FGf">
-                        <rect key="frame" x="260" y="10" width="60" height="40"/>
+                        <rect key="frame" x="575" y="10" width="60" height="40"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="60" id="RXr-WI-0G2"/>
+                            <constraint firstAttribute="height" constant="40" id="T6S-Op-iIH"/>
+                        </constraints>
+                    </view>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="U6K-Nx-KrZ">
+                        <rect key="frame" x="588" y="13" width="34" height="34"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W5h-e7-xGL">
-                                <rect key="frame" x="2" y="2" width="56" height="16"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <rect key="frame" x="0.0" y="0.0" width="34" height="16"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="13"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WK2-yk-z7L">
-                                <rect key="frame" x="2" y="22" width="56" height="16"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <rect key="frame" x="0.0" y="18" width="34" height="16"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="13"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstAttribute="trailing" secondItem="W5h-e7-xGL" secondAttribute="trailing" constant="2" id="5bh-X7-Ke5"/>
-                            <constraint firstItem="W5h-e7-xGL" firstAttribute="leading" secondItem="09P-xg-FGf" secondAttribute="leading" constant="2" id="7Pk-Oq-Ein"/>
-                            <constraint firstAttribute="bottom" secondItem="WK2-yk-z7L" secondAttribute="bottom" constant="2" id="Cjw-uI-m1C"/>
-                            <constraint firstAttribute="width" constant="60" id="RXr-WI-0G2"/>
-                            <constraint firstAttribute="height" constant="40" id="T6S-Op-iIH"/>
-                            <constraint firstItem="WK2-yk-z7L" firstAttribute="leading" secondItem="09P-xg-FGf" secondAttribute="leading" constant="2" id="dsr-tm-2y4"/>
-                            <constraint firstAttribute="trailing" secondItem="WK2-yk-z7L" secondAttribute="trailing" constant="2" id="psk-PG-NhF"/>
-                            <constraint firstItem="W5h-e7-xGL" firstAttribute="top" secondItem="09P-xg-FGf" secondAttribute="top" constant="2" id="xct-f8-v0d"/>
-                        </constraints>
-                    </view>
+                    </stackView>
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="bottom" secondItem="ng0-Xj-c1e" secondAttribute="bottom" id="7VD-wK-XmX"/>
+                    <constraint firstAttribute="trailing" secondItem="e5R-mB-aFr" secondAttribute="trailing" id="JHo-b6-Jpr"/>
                     <constraint firstItem="ng0-Xj-c1e" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="LBH-st-kxR"/>
                     <constraint firstAttribute="trailing" secondItem="m7n-0h-CdK" secondAttribute="trailing" constant="4" id="MWo-Ca-wOY"/>
                     <constraint firstItem="ng0-Xj-c1e" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="NoH-hn-JCx"/>
                     <constraint firstItem="ng0-Xj-c1e" firstAttribute="bottom" secondItem="qFJ-lH-oOT" secondAttribute="bottom" constant="8" id="O53-fC-YrQ"/>
                     <constraint firstItem="09P-xg-FGf" firstAttribute="top" secondItem="ng0-Xj-c1e" secondAttribute="top" constant="10" id="Ps9-rb-OvW"/>
+                    <constraint firstItem="e5R-mB-aFr" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="UFx-r4-aGo"/>
                     <constraint firstItem="m7n-0h-CdK" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="4" id="cop-DM-a4p"/>
                     <constraint firstItem="qFJ-lH-oOT" firstAttribute="top" secondItem="m7n-0h-CdK" secondAttribute="bottom" constant="4" id="fI3-zv-XfU"/>
                     <constraint firstItem="qFJ-lH-oOT" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="4" id="fSH-UP-3z6"/>
+                    <constraint firstItem="U6K-Nx-KrZ" firstAttribute="centerX" secondItem="09P-xg-FGf" secondAttribute="centerX" id="fou-EG-sFF"/>
                     <constraint firstItem="ng0-Xj-c1e" firstAttribute="trailing" secondItem="09P-xg-FGf" secondAttribute="trailing" constant="10" id="fy0-nR-uWh"/>
                     <constraint firstAttribute="trailing" secondItem="qFJ-lH-oOT" secondAttribute="trailing" constant="4" id="j19-Ae-99R"/>
+                    <constraint firstItem="e5R-mB-aFr" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="osb-I8-keA"/>
                     <constraint firstAttribute="trailing" secondItem="ng0-Xj-c1e" secondAttribute="trailing" id="vsu-oK-mYW"/>
+                    <constraint firstItem="U6K-Nx-KrZ" firstAttribute="centerY" secondItem="09P-xg-FGf" secondAttribute="centerY" id="vxB-ez-aRt"/>
+                    <constraint firstAttribute="bottom" secondItem="e5R-mB-aFr" secondAttribute="bottom" id="wbU-d5-1po"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
+                <outlet property="gradientView" destination="e5R-mB-aFr" id="cSq-gg-FMA"/>
                 <outlet property="recipeImageView" destination="ng0-Xj-c1e" id="or0-Po-q6g"/>
                 <outlet property="recipeIngredientsLabel" destination="qFJ-lH-oOT" id="tXR-Yp-34d"/>
                 <outlet property="recipeRateLabel" destination="W5h-e7-xGL" id="LVB-iN-Oeh"/>
@@ -87,7 +90,7 @@
                 <outlet property="recipeTitleLabel" destination="m7n-0h-CdK" id="X85-MY-bHU"/>
                 <outlet property="topRightView" destination="09P-xg-FGf" id="9QD-V5-2l1"/>
             </connections>
-            <point key="canvasLocation" x="142.02898550724638" y="157.03125"/>
+            <point key="canvasLocation" x="470.28985507246381" y="77.678571428571431"/>
         </tableViewCell>
     </objects>
 </document>
